# flask-react-typescript-monolith

./: .gitignore  app.py  pyproject.toml
config/: dev.py
todo_list/: ext.py
todo_list/user/: model.py
