[tool.poetry]
name = "todo-list"
version = "0.1.0"
description = "A simple To-Do List repo in Flask to serve as a template repository for a simple monolith"
authors = ["Tanay PrabhuDesai <tanayseven@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.1"
flask-security = "^3.0.0"
flask-marshmallow = "^0.11.0"
peewee = "^3.13.1"
psycopg2-binary = "^2.8.4"

[tool.poetry.dev-dependencies]
pytest = "^5.3.5"
pytest-sugar = "^0.9.2"
pytest-cov = "^2.8.1"
pytest-bdd = "^3.2.1"
pytest-flask = "^1.0.0"
flask-shell-ipython = "^0.4.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
